Update bind commands in bind.cfg

--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -32,8 +32,8 @@ bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
 bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
-bind "scancode51"     say "i log in, inject 𝚙𝚛𝚒𝚖𝚘𝚛𝚍𝚒𝚊𝚕.𝚍𝚎𝚟, load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜, the game is 𝒻𝑜𝓊𝓃𝒹, I start to kill 𝕔𝕝𝕖𝕒𝕟𝕤 and get a １４ ｄａｙｓ 🄶🅁🄸🄴🄵 🄱🄰🄽" // [;] 
-bind "scancode51"     say "cum fry on my prane" // [;] 
+bind "scancode51"     say "load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜, the game is 𝒻𝑜𝓊𝓃𝒹, I start to kill 𝕔𝕝𝕖𝕒𝕟𝕤 and get a １４ ｄａｙｓ 🄶🅁🄸🄴🄵 🄱🄰🄽" // [;] 
+bind "scancode51"     say "ｉｍ ｓａｙ ｉ ｄｏｎｔ ｗａｎｎａ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤, ｈｅ ｓａｙｓ ｔｈｅｎ ｄｏｎｔ ｔｈｅｎ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤​" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
