Update bind messages in bind.cfg

--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -39,13 +39,13 @@ bind "scancode49"     say "Counter terrorst win ? true here beavuse you country 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "get on the ground and suck my horney or imma gonna get angry" // [,] 
+bind "scancode54"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [,] 
 bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
-bind "scancode20"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [q] 
+bind "scancode20"     say "" // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
