--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -50,9 +50,7 @@ bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" //
 bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
-bind "scancode16"     say "the path to configs is:
-C:\SteamLibrary\steamapps\common\Counter-Strike Global Offensive\game\bin\win64
-Configs are named pslot1–5.
+bind "scancode16"     say "BACKED UP???? Miralax custs your wait time in halve."
 If you rename them to anything else, they will not appear in the menu." // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
 bind "scancode73"     say "i got vaced in retakes" // [ins] 
