--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -53,7 +53,7 @@ bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go 
 bind "scancode16"     say "BACKED UP???? Miralax custs your wait time in halve."
 If you rename them to anything else, they will not appear in the menu." // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
-bind "scancode73"     say "i got vaced in retakes" // [ins] 
+bind "scancode73"     say "no" // [ins] 
 bind "scancode57"     say "SIR YES SIR OORAHHH !!!" // [capslock] 
 bind "scancode229"    say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [rshift]
 bind "scancode224"    say "𝕕𝕦𝕞𝕓 𝕕𝕠𝕘, 𝕪𝕠𝕦 𝕒𝕨𝕒𝕜𝕖 𝕥𝕙𝕖 ᴅʀᴀɢᴏɴ ʜᴠʜ ᴍᴀᴄʜɪɴᴇ, 𝕟𝕠𝕨 𝕪𝕠𝕦 𝕝𝕠𝕤𝕖 𝙖𝙘𝙘 𝕒𝕟𝕕 𝚐𝚊𝚖𝚎 ♕" // [ctrl] 
