Update bind.cfg with new sayings and phrases

--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -31,29 +31,29 @@ bind "scancode39"     say "When you are on ground having boring i an in my golde
 bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
-bind "scancode56"     say "Other pepol are shooting aer. But me HS you. now all family disrespect but it fine because the world what it is!" // [/] 
+bind "scancode56"     say "MY HYPERFIXATION IS FINGERING HIM" // [/] 
 bind "scancode51"     say "load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜, the game is 𝒻𝑜𝓊𝓃𝒹, I start to kill 𝕔𝕝𝕖𝕒𝕟𝕤 and get a １４ ｄａｙｓ 🄶🅁🄸🄴🄵 🄱🄰🄽" // [;] 
 bind "scancode51"     say "ｉｍ ｓａｙ ｉ ｄｏｎｔ ｗａｎｎａ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤, ｈｅ ｓａｙｓ ｔｈｅｎ ｄｏｎｔ ｔｈｅｎ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤​" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
 bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
-bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family (DOG)" // [z] 
-bind "scancode54"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4  dad not playing iq 999 game like coutner striek 2" // [,] 
-bind "scancode55"     say "Thanks allah for him making Me HS you, JOKE i always kill...." // [.] 
+bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family" // [z] 
+bind "scancode54"     say "Let you parents know you dye after this loze you are a dmb retad you belong on knees 4 dad not playing iq 999 game like coutner striek 2" // [,] 
+bind "scancode55"     say "MY SAFE FOODS ARE HIS SWEAT AND HIS PUSSY" // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
 bind "scancode19"     say "You luckyer that when i hs i would nife you in backstab" // [p] 
 bind "scancode20"     say "If you pspsps into the abyss, the abyss pspspss also into you.." // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
-bind "scancode12"     say "The browser has you password save. I get you pasword to use on account and make all you little money to my account?" // [i] 
+bind "scancode12"     say "MY STIM TOY IS HIS PEANITS" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
-bind "scancode16"     say "BACKED UP???? Miralax custs your wait time in halve."
+bind "scancode16"     say "MY TYLENOL IS HIS HUGE ASS!!!!!!!!!!!!!!"
 If you rename them to anything else, they will not appear in the menu." // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
-bind "scancode73"     say "no" // [ins] 
+bind "scancode73"     say "MY AUTISM BURNOUT CAN ONLY BE CURED BY SNIFFING HIS UNDERWEAR" // [ins] 
 bind "scancode57"     say "SIR YES SIR OORAHHH !!!" // [capslock] 
 bind "scancode229"    say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [rshift]
 bind "scancode224"    say "𝕕𝕦𝕞𝕓 𝕕𝕠𝕘, 𝕪𝕠𝕦 𝕒𝕨𝕒𝕜𝕖 𝕥𝕙𝕖 ᴅʀᴀɢᴏɴ ʜᴠʜ ᴍᴀᴄʜɪɴᴇ, 𝕟𝕠𝕨 𝕪𝕠𝕦 𝕝𝕠𝕤𝕖 𝙖𝙘𝙘 𝕒𝕟𝕕 𝚐𝚊𝚖𝚎 ♕" // [ctrl] 
