Update bind configuration with new key bindings

--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -87,7 +87,7 @@ bind "scancode55"     say "MY SAFE FOODS ARE HIS SWEAT AND HIS PUSSY" // [.]
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "𝕚𝕟 𝟝𝕧𝕤𝟝 𝕚𝕞 𝕒𝕝𝕨𝕒𝕪𝕤 𝕤𝕡𝕖𝕒𝕜 𝕗𝕠𝕣 𝕥𝕖𝕒𝕞, 𝔻𝕆ℕ𝕋 𝕘𝕠𝕚𝕟𝕘 𝕗𝕠𝕣 𝕙𝕖𝕒𝕕𝕤, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, 𝕓𝕦𝕥 𝕕𝕠𝕘𝕤 𝕟𝕖𝕧𝕖𝕣 𝕨𝕒𝕟𝕥 𝕝𝕚𝕤𝕥𝕖𝕟" // [p] 
+bind "scancode19"     say "𝟝𝕧𝕤𝟝 𝕚𝕞𝕒𝕝𝕨𝕒𝕪𝕤 𝕤𝕡𝕖𝕒𝕜 𝕗𝕠𝕣 𝕥𝕖𝕒𝕞,𝔻𝕆ℕ𝕋 𝕘𝕠𝕚𝕟𝕘 𝕗𝕠𝕣 𝕙𝕖𝕒𝕕𝕤,𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊,𝕓𝕦𝕥 𝕕𝕠𝕘𝕤 𝕟𝕖𝕧𝕖𝕣 𝕨𝕒𝕟𝕥 𝕝𝕚𝕤𝕥𝕖𝕟" // [p] 
 bind "scancode20"     say "If you pspsps into the abyss, the abyss pspspss also into you.." // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "MY STIM TOY IS HIS PEANITS" // [i] 
