--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -78,23 +78,23 @@ bind "scancode56"     say "MY HYPERFIXATION IS FINGERING HIM" // [/]
 bind "scancode75"     say "load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜, the game is 𝒻𝑜𝓊𝓃𝒹, I start to kill 𝕔𝕝𝕖𝕒𝕟𝕤 and get a １４ ｄａｙｓ 🄶🅁🄸🄴🄵 🄱🄰🄽" // [pgup]
 bind "scancode51"     say "ｉｍ ｓａｙ ｉ ｄｏｎｔ ｗａｎｎａ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤, ｈｅ ｓａｙｓ ｔｈｅｎ ｄｏｎｔ ｔｈｅｎ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤​" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
-bind "scancode49"     say "Counter terrorst win ? true here beavuse you country is terrorist but my counrty is rich and you live slums" // [\] 
-bind "scancode6"      say "Midle east need to learn bomb defusual tacktiks for counter terrosits and all countryes bow down to me lebanon king" // [c] 
+bind "scancode49"     say "ＭＹ ＵＩＤ １５９０７ ＰＭ ＭＥ ＯＮ ＦＯＲＵＭ ＦＯＲ ＱＵＩＣＫ ＳＥＸＸＸ" // [\] 
+bind "scancode6"      say "𝕖𝕧𝕖𝕣𝕪 𝕘𝕒𝕞𝕖 𝕚𝕞 𝕡𝕝𝕒𝕪 𝕚𝕥𝕤 𝕝𝕚𝕜𝕖 𝕤𝕖𝕞𝕚𝕣𝕒𝕘𝕖 𝕙𝕚𝕘𝕙𝕝𝕚𝕘𝕙𝕥𝕤 𝕖𝕡 𝟛𝟞𝟚" // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family" // [z] 
-bind "scancode54"     say "𝕚𝕟 𝟝𝕧𝕤𝟝 𝕚𝕞 𝕒𝕝𝕨𝕒𝕪𝕤 𝕤𝕡𝕖𝕒𝕜 𝕗𝕠𝕣 𝕥𝕖𝕒𝕞, 𝔻𝕆ℕ𝕋 𝕘𝕠𝕚𝕟𝕘 𝕗𝕠𝕣 𝕙𝕖𝕒𝕕𝕤, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, 𝕓𝕦𝕥 𝕕𝕠𝕘𝕤 𝕟𝕖𝕧𝕖𝕣 𝕨𝕒𝕟𝕥 𝕝𝕚𝕤𝕥𝕖𝕟" // [,] 
+bind "scancode54"     say "𝕨𝕙𝕖𝕟 𝕥𝕙𝕖𝕪 𝕤𝕒𝕪 𝕟𝕚𝕔𝕖 𝕔𝕙𝕖𝕒𝕥 𝕓𝕦𝕥 𝕚𝕤 𝕛𝕦𝕤𝕥 𝕪𝕠𝕦𝕣 𝕘𝕒𝕞𝕖𝕤𝕖𝕟𝕤𝕖 ♛" // [,] 
 bind "scancode55"     say "MY SAFE FOODS ARE HIS SWEAT AND HIS PUSSY" // [.] 
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "𝟝𝕧𝕤𝟝 𝕚𝕞𝕒𝕝𝕨𝕒𝕪𝕤 𝕤𝕡𝕖𝕒𝕜 𝕗𝕠𝕣 𝕥𝕖𝕒𝕞,𝔻𝕆ℕ𝕋 𝕘𝕠𝕚𝕟𝕘 𝕗𝕠𝕣 𝕙𝕖𝕒𝕕𝕤,𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊,𝕓𝕦𝕥 𝕕𝕠𝕘𝕤 𝕟𝕖𝕧𝕖𝕣 𝕨𝕒𝕟𝕥 𝕝𝕚𝕤𝕥𝕖𝕟" // [p] 
+bind "scancode19"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, ​🇧​​🇺​​🇹​ ​🇩​​🇴​​🇬​​🇸​ ​🇳​​🇪​​🇻​​🇪​​🇷​ ​🇼​​🇦​​🇳​​🇹​ ​🇱​​🇮​​🇸​​🇹​​🇪​​🇳" // [p] 
 bind "scancode20"     say "𝕐𝕠𝕦 𝕒𝕦𝕥𝕠𝕨𝕒𝕝𝕝 𝕞𝕖 𝕗𝕚𝕣𝕤𝕥 𝕀 𝕒𝕦𝕥𝕠𝕨𝕒𝕝𝕝 𝕤𝕖𝕔𝕠𝕟𝕕." // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "MY STIM TOY IS HIS PEANITS" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
 bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
 bind "scancode16"     say "MY TYLENOL IS HIS HUGE ASS!!!!!!!!!!!!!!"
-bind "scancode50"     say "If you rename them to anything else, they will not appear in the menu." // [m]
+bind "scancode50"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, ​🇧​​🇺​​🇹​ ​🇩​​🇴​​🇬​​🇸​ ​🇳​​🇪​​🇻​​🇪​​🇷​ ​🇼​​🇦​​🇳​​🇹​ ​🇱​​🇮​​🇸​​🇹​​🇪​​🇳" // [m]
 bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
 bind "scancode73"     say "MY AUTISM BURNOUT CAN ONLY BE CURED BY SNIFFING HIS UNDERWEAR" // [ins] 
 bind "scancode57"     say "𝕐𝕠𝕦 𝕝𝕠𝕤𝕖 𝕀 𝕨𝕚𝕟." // [capslock] 
