--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -87,7 +87,7 @@ bind "scancode55"     say "MY SAFE FOODS ARE HIS SWEAT AND HIS PUSSY" // [.]
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, ​🇧​​🇺​​🇹​ ​🇩​​🇴​​🇬​​🇸​ ​🇳​​🇪​​🇻​​🇪​​🇷​ ​🇼​​🇦​​🇳​​🇹​ ​🇱​​🇮​​🇸​​🇹​​🇪​​🇳" // [p] 
+bind "scancode19"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, 𝗯𝘂𝘁 𝗱𝗼𝗴𝘀 𝗻𝗲𝘃𝗲𝗿 𝘄𝗮𝗻𝘁 𝗹𝗶𝘀𝘁𝗲𝗻" // [p] 
 bind "scancode20"     say "𝕐𝕠𝕦 𝕒𝕦𝕥𝕠𝕨𝕒𝕝𝕝 𝕞𝕖 𝕗𝕚𝕣𝕤𝕥 𝕀 𝕒𝕦𝕥𝕠𝕨𝕒𝕝𝕝 𝕤𝕖𝕔𝕠𝕟𝕕." // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "MY STIM TOY IS HIS PEANITS" // [i] 
