--- a/VerloxsAutoexec/Verloxs/bind.cfg
+++ b/VerloxsAutoexec/Verloxs/bind.cfg
@@ -66,12 +66,12 @@ bind "mouse3"         "player_ping" // Ping
 bind "mouse4"         "+voicerecord" // Voice <push to talk; only with teammates in matchmaking>. 
 
 // funny binds
-bind "scancode35"     say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [6] 
+bind "scancode35"     say "𝕖𝕧𝕖𝕣𝕪 𝕘𝕒𝕞𝕖 𝕚𝕞 𝕡𝕝𝕒𝕪 𝕚𝕥𝕤 𝕝𝕚𝕜𝕖 𝕤𝕖𝕞𝕚𝕣𝕒𝕘𝕖 𝕙𝕚𝕘𝕙𝕝𝕚𝕘𝕙𝕥𝕤 𝕖𝕡 𝟛𝟞𝟚 (◣_◢)" // [6] 
 bind "scancode36"     say "𝕚𝕕𝕚𝕠𝕥 𝕒𝕝𝕨𝕒𝕪𝕤 𝕒𝕤𝕜 𝕞𝕖,𝕦𝕚𝕕?𝕒𝕟𝕕𝕚𝕞 𝕕𝕠𝕟𝕥 𝕒𝕟𝕤𝕨𝕖𝕣,𝕚 𝕝𝕖𝕥 𝕥𝕙𝕖 𝕤𝕔𝕠𝕣𝕖𝕓𝕠𝕒𝕣𝕕 𝕥𝕒𝕝𝕜♛" // [7] 
-bind "scancode37"     say "𝔻𝕠𝕟𝕥' 𝕡𝕝𝕒𝕪 𝕓𝕒𝕟𝕜 𝕧𝕤 𝕞𝕖 , 𝕚𝕞 𝕝𝕚𝕧𝕖 𝕥𝕙𝕖𝕣𝕖." // [8]  
+bind "scancode37"     say "𝔻𝕠𝕟𝕥' 𝕡𝕝𝕒𝕪 𝕓𝕒𝕟𝕜 𝕧𝕤 𝕞𝕖 , 𝕚𝕞 𝕝𝕚𝕧𝕖 𝕥𝕙𝕖𝕣𝕖 (◣_◢)" // [8]  
 bind "scancode38"     say "𝕒𝕦𝕥𝕠𝕨𝕒𝕝𝕝 𝕞𝕖 𝕠𝕟𝕔𝕖, 𝕚 𝕒𝕨𝕒𝕝𝕝 𝕪𝕠𝕦 𝕥𝕨𝕚𝕔𝕖 (◣_◢)" // [9] 
-bind "scancode39"     say "When you are on ground having boring i an in my golden jet with my bands" // [0] 
-bind "scancode45"     say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [-] 
+bind "scancode39"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc (◣_◢)" // [0] 
+bind "scancode45"     say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼 (◣_◢)" // [-] 
 bind "scancode47"     say "Single blk man looking for a single female who need or looking for stability in there life. Must be willing to be a live in female without the drama. Must be drug free, honest, caring." // ([) 
 bind "scancode48"     say "say she want a baby while she mastering my yoda" // (]) 
 bind "scancode56"     say "MY HYPERFIXATION IS FINGERING HIM" // [/] 
@@ -79,7 +79,7 @@ bind "scancode75"     say "load 𝘴𝘭𝘰𝘵 5 and start searching 🅜🅜,
 bind "scancode51"     say "ｉｍ ｓａｙ ｉ ｄｏｎｔ ｗａｎｎａ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤, ｈｅ ｓａｙｓ ｔｈｅｎ ｄｏｎｔ ｔｈｅｎ 𝕘𝕖𝕥 𝕧𝕒𝕔𝕝𝕚𝕧𝕖𝕤​" // [;] 
 bind "scancode52"     say "Blood pores from top of DE_MIRAGE but police wonrder who blood is? it you blood i explode you with shootgun" // ['] 
 bind "scancode49"     say "ＭＹ ＵＩＤ １５９０７ ＰＭ ＭＥ ＯＮ ＦＯＲＵＭ ＦＯＲ ＱＵＩＣＫ ＳＥＸＸＸ" // [\] 
-bind "scancode6"      say "𝕖𝕧𝕖𝕣𝕪 𝕘𝕒𝕞𝕖 𝕚𝕞 𝕡𝕝𝕒𝕪 𝕚𝕥𝕤 𝕝𝕚𝕜𝕖 𝕤𝕖𝕞𝕚𝕣𝕒𝕘𝕖 𝕙𝕚𝕘𝕙𝕝𝕚𝕘𝕙𝕥𝕤 𝕖𝕡 𝟛𝟞𝟚" // [c] 
+bind "scancode6"      say "Her body is broad and powerful, built for endurance rather than elegance, with thick thighs, strong arms, and a wide back capable of bearing weight." // [c] 
 bind "scancode9"      say "Nifed you like i peeky blinders, you die like mohammed back in the days when you younger bot" // [f] 
 bind "scancode29"     say "When i walk up ladder you look with rifel. I shoot befor and sniper you. You are now on ground with family" // [z] 
 bind "scancode54"     say "𝕨𝕙𝕖𝕟 𝕥𝕙𝕖𝕪 𝕤𝕒𝕪 𝕟𝕚𝕔𝕖 𝕔𝕙𝕖𝕒𝕥 𝕓𝕦𝕥 𝕚𝕤 𝕛𝕦𝕤𝕥 𝕪𝕠𝕦𝕣 𝕘𝕒𝕞𝕖𝕤𝕖𝕟𝕤𝕖 ♛" // [,] 
@@ -87,16 +87,16 @@ bind "scancode55"     say "MY SAFE FOODS ARE HIS SWEAT AND HIS PUSSY" // [.]
 bind "scancode25"     say "Breasts & Hips: Voluptuous in general." // [v] 
 bind "scancode17"     say "My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor." // [n] 
 bind "scancode18"     say "If you would just get up and teach them instead of handing them a friggin packet, yo. There’s kids in here that don’t learn like that. They need to learn face to face." // [o] 
-bind "scancode19"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, 𝗯𝘂𝘁 𝗱𝗼𝗴𝘀 𝗻𝗲𝘃𝗲𝗿 𝘄𝗮𝗻𝘁 𝗹𝗶𝘀𝘁𝗲𝗻" // [p] 
+bind "scancode19"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦 ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊 𝗯𝘂𝘁 𝗱𝗼𝗴𝘀 𝗻𝗲𝘃𝗲𝗿 𝘄𝗮𝗻𝘁 𝗹𝗶𝘀𝘁𝗲𝗻" // [p] 
 bind "scancode20"     say "𝕚𝕤 𝕝𝕚𝕜𝕖 𝕥𝕒𝕜𝕚𝕟 𝕔𝕒𝕟𝕕𝕪 𝕗𝕣𝕠𝕞 𝕒 𝕓𝕒𝕓𝕪 𝐜𝐞𝐩𝐭 𝐝𝐚 𝐰𝐢𝐧 𝐢𝐬 𝐝𝐚 𝐜𝐚𝐧𝐝𝐲 ♥ and you are da baby ♥(っ◔◡◔)っ" // [q] 
 bind "scancode15"     say "HOW YOU GONNA EAT FRIED CHICKEN WITH NO SODA MAN?" // [l] 
 bind "scancode12"     say "MY STIM TOY IS HIS PEANITS" // [i] 
 bind "scancode13"     say "Typikal bottys need to eat food when you play. but cant help me because i play evryday i have slave to eat for me and that slave you bot." // [j] 
-bind "scancode14"     say "u will 𝕣𝕖𝕘𝕣𝕖𝕥 rage vs me when i go on ｌｏｌｚ．ｇｕｒｕ acc." // [k] 
+bind "scancode14"     say "When you are on ground having boring i an in my golden jet with my bands" // [k] 
 bind "scancode16"     say "MY TYLENOL IS HIS HUGE ASS!!!!!!!!!!!!!!"
 bind "scancode50"     say "𝐢𝐧 𝟓𝐯𝐬𝟓 𝐢𝐦 𝐚𝐥𝐰𝐚𝐲𝐬 𝐬𝐩𝐞𝐚𝐤 𝐟𝐨𝐫 𝐭𝐞𝐚𝐦, ＤＯＮＴ ｇｏｉｎｇ ｆｏｒ ｈｅａｄｓ, 𝔹𝕆𝔻𝕐𝔸𝕀𝕄𝕊, ​🇧​​🇺​​🇹​ ​🇩​​🇴​​🇬​​🇸​ ​🇳​​🇪​​🇻​​🇪​​🇷​ ​🇼​​🇦​​🇳​​🇹​ ​🇱​​🇮​​🇸​​🇹​​🇪​​🇳" // [m]
-bind "scancode230"    say "𝕀𝔽 𝕀 𝕆ℙ𝔼ℕ 𝕊ℙ𝕀ℕ𝔹𝕆𝕋 𝔸𝕃𝕃 𝔻𝕆𝔾𝕊 𝔻𝕀𝔼" // [ralt] 
-bind "scancode73"     say "MY AUTISM BURNOUT CAN ONLY BE CURED BY SNIFFING HIS UNDERWEAR" // [ins] 
+bind "scancode230"    say "I am sad to the touch butt my mind is fureyous like a tyger. you dont mess with the bo$$ of the world" // [ralt] 
+bind "scancode73"     say "" // [ins] 
 bind "scancode57"     say "𝕐𝕠𝕦 𝕝𝕠𝕤𝕖 𝕀 𝕨𝕚𝕟." // [capslock] 
 bind "scancode229"    say "CHINESE BACKWOOD HACK 英雄联盟 SECRET BLUNT TECHNIQUE 英雄联盟英雄联盟 ANCIENT KUSH KNOWLEDGE 英雄联盟 40 BLUNTS ROLLED IN 20 SECONDS" // [rshift]
 bind "scancode224"    say "𝕕𝕦𝕞𝕓 𝕕𝕠𝕘, 𝕪𝕠𝕦 𝕒𝕨𝕒𝕜𝕖 𝕥𝕙𝕖 ᴅʀᴀɢᴏɴ ʜᴠʜ ᴍᴀᴄʜɪɴᴇ, 𝕟𝕠𝕨 𝕪𝕠𝕦 𝕝𝕠𝕤𝕖 𝙖𝙘𝙘 𝕒𝕟𝕕 𝚐𝚊𝚖𝚎 ♕" // [ctrl] 
